<resources>
    <string name="app_name">CLS DA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Home fragment</string>
    <string name="place_the_r">
Place the Rectangle area as on Vehicle Reg plate as shown in the image and capture the registration number
</string>
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>
    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maxium detected results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maxium detected results button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>
    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="cqsdk_osm_key">ab8c0110-9529-4e2c-a1d4-d810636bccf3.eu</string>
    <string name="cqsdk_driver_key">09f36b6e-deee-40f6-894b-553d4c592bcb.eu</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>
    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientDet Lite0</item>
        <item>EfficientDet Lite1</item>
        <item>EfficientDet Lite2</item>
    </string-array>
    <string name="CANCEL">Cancel</string>
    <string name="location">Location</string>
    <string name="away">Away</string>
    <string name="swipe_for_v">Swipe For Vehicle Reg No.</string>
    <string name="key_chain_confirmation_alert">Key Chain Confirmation Alert</string>
    <string name="keeping_you">"Keeping your vehicle safe and secure from theft of your vehicle or parcels is an important part of being a delivery driver. 90% of all vehicle thefts are when drivers leave their vehicle unattended unlocked or leave their keys in the vehicle. You as the Responsible Delivery Driver need to be aware of your responsibility and care of duty. Driver safety is important to us and we advise any driver that is threatened with violence for their vehicle and its contents to walk away from your vehicle and if your keys are taken to contact OSM immediately and contact the police and report the incident.\nPlease remember that mistakes mean £££ when not wearing your key chain. "</string>
    <string name="tick_to_ack">Tick to acknowledge that I have been instructed on keeping my vehicle safe and secure and that my Keychain will be used at all times while making deliveries.</string>
    <string name="ana_carolin"> </string>
    <string name="dxLoc">---</string>
    <string name="vehicle_mil">Vehicle Mileage\n</string>
    <string name="previous_re">Previous Recorded Mileage</string>
    <string name="miles">320 MIles\n</string>
    <string name="route_name">Route Name</string>
    <string name="celerity_ls">Celerity LS Delivery Driver Training Record</string>
    <string name="observation">Observations and explanations must be conducted on a Nursery Level 1 route. The new driver should make at least 50 unassisted deliveries, before being considered as fully trained. Where an individual is identified as not ready the On Site Manager must be made aware of the concerns and the development path to competency before the individual will be allowed to take a route out on their own. All sections must be completed.</string>
    <string name="daily_clock_out_tasks">Daily Clock Out Tasks</string>
    <string name="_3_complete_your_dvic_end_of_day_check">3. Complete your DVIC end of day check.</string>
    <string name="_2_double_check_you_have_completed_daily_vehicle_check_all_defect_reported"><![CDATA[2. Double check you have completed daily vehicle check & all defect reported.]]></string>
    <string name="_1_check_correct_route_information">1. Check correct route information.</string>
    <string name="daily_da_tasks_after_shift">DAILY DA TASKS AFTER Shift:</string>
    <string name="_4_log_out_of_amazon_flex">4. Log out of Amazon Flex.</string>
    <string name="_5_clock_out_of_da_system">5. Clock out of DA System.</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting">Lorem Ipsum is simply dummy text of the printing and typesetting ....</string>
    <string name="lorem_ipsum_is">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="use_email_as_user_name">Use Email as Username</string>
    <string name="please_confirm">Please confirm if you want to use your Email as your username for Login</string>
    <string name="use_email_as_username"><u>Use Email as Username</u></string>
    <string name="enter_defect">Enter Defect*</string>
    <string name="enter_password">Enter your Password</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic</string>
    <string name="change_password"><u>change password</u></string>
    <string name="no_match">not found\n</string>
    <string name="accessibility_service_description">This Accessibility Service is used to close the notification drawer when it is opened.</string>
</resources>