<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.VechileMileageFragment">

        <RelativeLayout
            android:id="@+id/rlinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/headings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_user" />

                <TextView
                    android:id="@+id/ana_carolin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_horizontal|top"
                    android:letterSpacing="0.04"
                    android:lineSpacingExtra="0.02dp"
                    android:text="@string/ana_carolin"
                    android:textColor="#231F20"
                    android:textSize="19sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/headings"
                android:layout_marginStart="20dp"

                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="18dp"
                        android:src="@drawable/pin_alt_light_two"></ImageView>

                    <TextView
                        android:id="@+id/dxLoc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:letterSpacing="0.03"
                        android:text="@string/dxLoc"
                        android:textColor="#231F20"
                        android:textSize="13sp"

                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"

                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="16dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_truck"/>

                    <TextView
                        android:id="@+id/dxReg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:gravity="center_horizontal|top"
                        android:letterSpacing="0.03"
                        android:text="@string/dxLoc"
                        android:textColor="#231F20"
                        android:textSize="13sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"

                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                                        <ImageView
                        android:layout_width="16dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_frame"/>

                    <TextView
                        android:id="@+id/dxm5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:gravity="center_horizontal|top"
                        android:letterSpacing="0.03"
                        android:text="@string/dxLoc"
                        android:textColor="#231F20"
                        android:textSize="13sp" />

                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>

        <ImageView
            android:id="@+id/img_mileage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="35dp"
            android:padding="2dp"
            android:src="@drawable/vichle_mileage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rlinfo" />

        <TextView
            android:id="@+id/vehicle_mil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="top"
            android:lineHeight="30sp"
            android:text="@string/vehicle_mil"
            android:textColor="#4A4A4A"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_mileage" />

        <TextView
            android:id="@+id/previous_re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:letterSpacing="0.02"
            android:text="@string/previous_re"
            android:textColor="#626C7C"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_mil" />

        <TextView
            android:id="@+id/miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/miles"
            android:textColor="#626C7C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/previous_re"
            app:layout_constraintStart_toStartOf="@+id/previous_re"
            app:layout_constraintTop_toBottomOf="@id/previous_re" />

        <EditText
            android:importantForAutofill="no"
            android:id="@+id/edt_milvm"
            android:layout_width="335dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_edittext_mileage"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal|center_vertical"
            android:hint="Enter Vehicle Start Mileage ..."
            android:inputType="number"
            android:letterSpacing="0.03"
            android:lineHeight="18sp"
            android:padding="5dp"
            android:textColor="@color/orange"
            android:textColorHint="#AAB9CF"
            android:textCursorDrawable="@drawable/txt_cursor_drawable"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/miles" />

        <TextView
            android:id="@+id/tv_next"
            style="@style/ctaStyle1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="20dp"
            android:enabled="false"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal|center_vertical"
            android:text="Save &amp; Next"
            android:textAllCaps="false"
            android:textColor="#F36C2E"
            app:layout_constraintTop_toBottomOf="@+id/edt_milvm" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
