<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/card"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/textview_acknowledgement">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:textColor="#000000"
                        android:id="@+id/headings"
                        android:gravity="center"
                        android:text="@string/key_chain_confirmation_alert"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/keeping_you"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/keeping_you"
                        android:letterSpacing="0.02"
                        android:textSize="15sp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/poppins"
                        android:layout_marginTop="20dp"
                        android:layout_below="@id/headings"
                        android:lineHeight="22sp"
                        android:textColor="#4A4A4A"
                        android:gravity="center_horizontal|center_vertical"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="20dp"
                        android:background="#E0E0E0"
                        android:layout_below="@id/keeping_you"/>


                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/check"
                    android:layout_marginTop="26dp"
                    android:orientation="horizontal"
                    android:layout_below="@+id/textview_acknowledgement">
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="2dp"
                        android:button="@null"
                        android:id="@+id/checkbox"
                        android:background="@drawable/checbox_selector"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:id="@+id/tick_to_ack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/inter"
                        android:gravity="start"
                        android:layout_marginEnd="20dp"
                        android:lineSpacingExtra="1sp"
                        android:text="@string/tick_to_ack"
                        android:textColor="#2C2728"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="31dp"
                    android:layout_below="@+id/check">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/img_Acknowledege"
                        android:src="@drawable/acknowledgement"/>


                </LinearLayout>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
